fixed bug that crashed app on safari

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -22,7 +22,7 @@ html {
     font-size: 12px;
   }
   @include lg {
-    font-size: 18px;
+    font-size: 16px;
   }
   @include lg-thin {
     font-size: 14px;
