--- a/docs/main.css
+++ b/docs/main.css
@@ -397,7 +397,7 @@
 
 @media screen and (min-width: 1300px) {
   html {
-    font-size: 18px; } }
+    font-size: 16px; } }
 
 @media screen and (min-width: 1300px) and (max-height: 799px) {
   html {
